data/derived/comb/progs/unify/prog4787.ml.out
Characters 69-73:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type int -> int -> int
       but an expression was expected of type int
